// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders InputTag/demo/basic.md correctly 1`] = `
<div>
  <div
    class="arco-space arco-space-horizontal arco-space-align-center"
    style="margin-bottom:20px"
  >
    <div
      class="arco-space-item"
      style="margin-right:8px"
    >
      <div
        class="arco-input-tag arco-input-tag-size-default arco-input-tag-has-placeholder"
        style="width:350px"
      >
        <div
          class="arco-input-tag-view"
        >
          <div
            class="arco-input-tag-inner"
          >
            <input
              autocomplete="off"
              class="arco-input-tag-input arco-input-tag-input-size-default"
              placeholder="Input and press Enter"
              value=""
            />
            <span
              class="arco-input-tag-input-mirror"
            >
              Input and press Enter
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="arco-space-item"
    >
      <div
        class="arco-input-tag arco-input-tag-size-default arco-input-tag-disabled arco-input-tag-has-placeholder"
        style="width:350px"
      >
        <div
          class="arco-input-tag-view"
        >
          <div
            class="arco-input-tag-inner"
          >
            <input
              autocomplete="off"
              class="arco-input-tag-input arco-input-tag-input-size-default arco-input-tag-input-disabled"
              disabled=""
              placeholder="Disabled"
              value=""
            />
            <span
              class="arco-input-tag-input-mirror"
            >
              Disabled
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-space arco-space-horizontal arco-space-align-center"
  >
    <div
      class="arco-space-item"
      style="margin-right:8px"
    >
      <div
        class="arco-input-tag arco-input-tag-size-default arco-input-tag-readonly arco-input-tag-has-placeholder"
        style="width:350px"
      >
        <div
          class="arco-input-tag-view"
        >
          <div
            class="arco-input-tag-inner"
          >
            <input
              autocomplete="off"
              class="arco-input-tag-input arco-input-tag-input-size-default"
              placeholder="Readonly"
              readonly=""
              value=""
            />
            <span
              class="arco-input-tag-input-mirror"
            >
              Readonly
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="arco-space-item"
    >
      <div
        class="arco-input-tag arco-input-tag-size-default arco-input-tag-error arco-input-tag-has-placeholder"
        style="width:350px"
      >
        <div
          class="arco-input-tag-view"
        >
          <div
            class="arco-input-tag-inner"
          >
            <input
              autocomplete="off"
              class="arco-input-tag-input arco-input-tag-input-size-default"
              placeholder="Error"
              value=""
            />
            <span
              class="arco-input-tag-input-mirror"
            >
              Error
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders InputTag/demo/draggable.md correctly 1`] = `
<div
  class="arco-input-tag arco-input-tag-size-default arco-input-tag-has-suffix"
  style="max-width:350px"
>
  <div
    class="arco-input-tag-view"
  >
    <div
      class="arco-input-tag-inner"
    >
      <div
        class="arco-draggable"
      >
        <li
          class="arco-draggable-item"
          draggable="true"
          style="display:inline-block"
        >
          <div
            class="arco-tag arco-tag-checked arco-tag-size-default arco-input-tag-tag"
            title="a"
          >
            <span
              class="arco-tag-content"
            >
              a
            </span>
            <span
              aria-label="Close"
              class="arco-icon-hover arco-tag-icon-hover arco-tag-close-btn"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-close"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          class="arco-draggable-item"
          draggable="true"
          style="display:inline-block"
        >
          <div
            class="arco-tag arco-tag-checked arco-tag-size-default arco-input-tag-tag"
            title="b"
          >
            <span
              class="arco-tag-content"
            >
              b
            </span>
            <span
              aria-label="Close"
              class="arco-icon-hover arco-tag-icon-hover arco-tag-close-btn"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-close"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          class="arco-draggable-item"
          draggable="true"
          style="display:inline-block"
        >
          <div
            class="arco-tag arco-tag-checked arco-tag-size-default arco-input-tag-tag"
            title="c"
          >
            <span
              class="arco-tag-content"
            >
              c
            </span>
            <span
              aria-label="Close"
              class="arco-icon-hover arco-tag-icon-hover arco-tag-close-btn"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-close"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          class="arco-draggable-item"
          draggable="true"
          style="display:inline-block"
        >
          <div
            class="arco-tag arco-tag-checked arco-tag-size-default arco-input-tag-tag"
            title="d"
          >
            <span
              class="arco-tag-content"
            >
              d
            </span>
            <span
              aria-label="Close"
              class="arco-icon-hover arco-tag-icon-hover arco-tag-close-btn"
              role="button"
              tabindex="0"
            >
              <svg
                aria-hidden="true"
                class="arco-icon arco-icon-close"
                fill="none"
                focusable="false"
                stroke="currentColor"
                stroke-width="4"
                viewBox="0 0 48 48"
              >
                <path
                  d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          class="arco-draggable-item"
          draggable="true"
          style="display:inline-block"
        >
          <input
            autocomplete="off"
            class="arco-input-tag-input arco-input-tag-input-size-default"
            placeholder=""
            value=""
          />
          <span
            class="arco-input-tag-input-mirror"
          />
        </li>
      </div>
    </div>
    <div
      class="arco-input-tag-suffix"
    >
      <span
        class="arco-icon-hover arco-input-tag-clear-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-close"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders InputTag/demo/labelInValue.md correctly 1`] = `
<div
  class="arco-input-tag arco-input-tag-size-default arco-input-tag-has-suffix"
  style="max-width:350px"
>
  <div
    class="arco-input-tag-view"
  >
    <div
      class="arco-input-tag-inner"
    >
      <div
        class="arco-tag arco-tag-checked arco-tag-size-default arco-input-tag-tag"
        title="a"
      >
        <span
          class="arco-tag-content"
        >
          a
        </span>
        <span
          aria-label="Close"
          class="arco-icon-hover arco-tag-icon-hover arco-tag-close-btn"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-close"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
            />
          </svg>
        </span>
      </div>
      <input
        autocomplete="off"
        class="arco-input-tag-input arco-input-tag-input-size-default"
        placeholder=""
        value=""
      />
      <span
        class="arco-input-tag-input-mirror"
      />
    </div>
    <div
      class="arco-input-tag-suffix"
    >
      <span
        class="arco-icon-hover arco-input-tag-clear-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-close"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders InputTag/demo/render-tag.md correctly 1`] = `
<div
  class="arco-input-tag arco-input-tag-size-default arco-input-tag-has-suffix"
  style="max-width:350px"
>
  <div
    class="arco-input-tag-view"
  >
    <div
      class="arco-input-tag-inner"
    >
      <div
        class="arco-tag arco-tag-arcoblue arco-tag-checked arco-tag-size-default"
        style="margin:2px 6px 2px 0"
      >
        <span
          class="arco-tag-content"
        >
          arcoblue
        </span>
        <span
          aria-label="Close"
          class="arco-icon-hover arco-tag-icon-hover arco-tag-close-btn"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-close"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
            />
          </svg>
        </span>
      </div>
      <div
        class="arco-tag arco-tag-orange arco-tag-checked arco-tag-size-default"
        style="margin:2px 6px 2px 0"
      >
        <span
          class="arco-tag-content"
        >
          orange
        </span>
        <span
          aria-label="Close"
          class="arco-icon-hover arco-tag-icon-hover arco-tag-close-btn"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-close"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
            />
          </svg>
        </span>
      </div>
      <div
        class="arco-tag arco-tag-lime arco-tag-checked arco-tag-size-default"
        style="margin:2px 6px 2px 0"
      >
        <span
          class="arco-tag-content"
        >
          lime
        </span>
        <span
          aria-label="Close"
          class="arco-icon-hover arco-tag-icon-hover arco-tag-close-btn"
          role="button"
          tabindex="0"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-close"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
            />
          </svg>
        </span>
      </div>
      <input
        autocomplete="off"
        class="arco-input-tag-input arco-input-tag-input-size-default"
        placeholder=""
        value=""
      />
      <span
        class="arco-input-tag-input-mirror"
      />
    </div>
    <div
      class="arco-input-tag-suffix"
    >
      <span
        class="arco-icon-hover arco-input-tag-clear-icon"
      >
        <svg
          aria-hidden="true"
          class="arco-icon arco-icon-close"
          fill="none"
          focusable="false"
          stroke="currentColor"
          stroke-width="4"
          viewBox="0 0 48 48"
        >
          <path
            d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`renders InputTag/demo/save-on-blur.md correctly 1`] = `
<div
  class="arco-input-tag arco-input-tag-size-default arco-input-tag-has-placeholder"
  style="max-width:350px"
>
  <div
    class="arco-input-tag-view"
  >
    <div
      class="arco-input-tag-inner"
    >
      <input
        autocomplete="off"
        class="arco-input-tag-input arco-input-tag-input-size-default"
        placeholder="Input and blur directly"
        value=""
      />
      <span
        class="arco-input-tag-input-mirror"
      >
        Input and blur directly
      </span>
    </div>
  </div>
</div>
`;

exports[`renders InputTag/demo/size.md correctly 1`] = `
<div>
  <div
    class="arco-radio-group arco-radio-group-type-button arco-radio-size-default arco-radio-mode-outline"
    role="radiogroup"
    style="margin-bottom:20px;border-radius:4px"
  >
    <label
      class="arco-radio-button"
    >
      <input
        name="size"
        type="radio"
        value="mini"
      />
      <span
        class="arco-radio-button-inner"
      >
        mini
      </span>
    </label>
    <label
      class="arco-radio-button"
    >
      <input
        name="size"
        type="radio"
        value="small"
      />
      <span
        class="arco-radio-button-inner"
      >
        small
      </span>
    </label>
    <label
      class="arco-radio-button arco-radio-checked"
    >
      <input
        checked=""
        name="size"
        type="radio"
        value="default"
      />
      <span
        class="arco-radio-button-inner"
      >
        default
      </span>
    </label>
    <label
      class="arco-radio-button"
    >
      <input
        name="size"
        type="radio"
        value="large"
      />
      <span
        class="arco-radio-button-inner"
      >
        large
      </span>
    </label>
  </div>
  <br />
  <div
    class="arco-input-tag arco-input-tag-size-default arco-input-tag-has-suffix"
    style="max-width:350px;margin-right:20px"
  >
    <div
      class="arco-input-tag-view"
    >
      <div
        class="arco-input-tag-inner"
      >
        <div
          class="arco-tag arco-tag-checked arco-tag-size-default arco-input-tag-tag"
          title="Beijing"
        >
          <span
            class="arco-tag-content"
          >
            Beijing
          </span>
          <span
            aria-label="Close"
            class="arco-icon-hover arco-tag-icon-hover arco-tag-close-btn"
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-close"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
              />
            </svg>
          </span>
        </div>
        <div
          class="arco-tag arco-tag-checked arco-tag-size-default arco-input-tag-tag"
          title="Shanghai"
        >
          <span
            class="arco-tag-content"
          >
            Shanghai
          </span>
          <span
            aria-label="Close"
            class="arco-icon-hover arco-tag-icon-hover arco-tag-close-btn"
            role="button"
            tabindex="0"
          >
            <svg
              aria-hidden="true"
              class="arco-icon arco-icon-close"
              fill="none"
              focusable="false"
              stroke="currentColor"
              stroke-width="4"
              viewBox="0 0 48 48"
            >
              <path
                d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
              />
            </svg>
          </span>
        </div>
        <input
          autocomplete="off"
          class="arco-input-tag-input arco-input-tag-input-size-default"
          placeholder=""
          value=""
        />
        <span
          class="arco-input-tag-input-mirror"
        />
      </div>
      <div
        class="arco-input-tag-suffix"
      >
        <span
          class="arco-icon-hover arco-input-tag-clear-icon"
        >
          <svg
            aria-hidden="true"
            class="arco-icon arco-icon-close"
            fill="none"
            focusable="false"
            stroke="currentColor"
            stroke-width="4"
            viewBox="0 0 48 48"
          >
            <path
              d="M9.857 9.858 24 24m0 0 14.142 14.142M24 24 38.142 9.858M24 24 9.857 38.142"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders InputTag/demo/tokenSeparator.md correctly 1`] = `
<div>
  <div
    class="arco-typography"
  >
    Beijing,Shenzhen|Nanjing/Xi'an
    <span
      aria-label="复制"
      class="arco-typography-operation-copy"
      role="button"
      tabindex="0"
    >
      <svg
        aria-hidden="true"
        class="arco-icon arco-icon-copy"
        fill="none"
        focusable="false"
        stroke="currentColor"
        stroke-width="4"
        viewBox="0 0 48 48"
      >
        <path
          d="M20 6h18a2 2 0 0 1 2 2v22M8 16v24c0 1.105.891 2 1.996 2h20.007A1.99 1.99 0 0 0 32 40.008V15.997A1.997 1.997 0 0 0 30 14H10a2 2 0 0 0-2 2Z"
        />
      </svg>
    </span>
  </div>
  <div
    class="arco-input-tag arco-input-tag-size-default arco-input-tag-has-placeholder"
    style="width:350px"
  >
    <div
      class="arco-input-tag-view"
    >
      <div
        class="arco-input-tag-inner"
      >
        <input
          autocomplete="off"
          class="arco-input-tag-input arco-input-tag-input-size-default"
          placeholder="Paste text here"
          value=""
        />
        <span
          class="arco-input-tag-input-mirror"
        >
          Paste text here
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders InputTag/demo/validate.md correctly 1`] = `
<div
  class="arco-space arco-space-horizontal arco-space-align-center"
>
  <div
    class="arco-space-item"
    style="margin-right:8px"
  >
    <div
      class="arco-input-tag arco-input-tag-size-default arco-input-tag-has-placeholder"
      style="width:350px"
    >
      <div
        class="arco-input-tag-view"
      >
        <div
          class="arco-input-tag-inner"
        >
          <input
            autocomplete="off"
            class="arco-input-tag-input arco-input-tag-input-size-default"
            placeholder="Please input"
            value=""
          />
          <span
            class="arco-input-tag-input-mirror"
          >
            Please input
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="arco-space-item"
  >
    <div
      class="arco-input-tag arco-input-tag-size-default arco-input-tag-has-placeholder"
      style="width:350px"
    >
      <div
        class="arco-input-tag-view"
      >
        <div
          class="arco-input-tag-inner"
        >
          <input
            autocomplete="off"
            class="arco-input-tag-input arco-input-tag-input-size-default"
            placeholder="Format user input"
            value=""
          />
          <span
            class="arco-input-tag-input-mirror"
          >
            Format user input
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
